--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode production",
+    "start": "webpack serve --open --mode development"
   },
   "repository": {
     "type": "git",
@@ -23,5 +25,21 @@
   "bugs": {
     "url": "https://github.com/aleereza/first-threejs-game/issues"
   },
-  "homepage": "https://github.com/aleereza/first-threejs-game#readme"
+  "homepage": "https://github.com/aleereza/first-threejs-game#readme",
+  "presets": [
+    "@babel/preset-env"
+  ],
+  "dependencies": {
+    "cannon-es": "^0.20.0",
+    "three": "^0.162.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
+    "babel-loader": "^9.1.3",
+    "html-webpack-plugin": "^5.6.0",
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.2"
+  }
 }
